--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Mock up of future juiceBOX user interface"
+      content="Mock up of future jooseBOX user interface"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     
-    <title>juiceBOX</title>
+    <title>jooseBOX</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
